# zenith

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
zenith/: Cargo.toml
zenith-asset/: Cargo.toml
zenith-asset/src/: gltf_loader.rs  lib.rs  manager.rs  render.rs
zenith-build/: Cargo.toml  build.rs
zenith-build/shader/: mesh.wgsl  triangle.wgsl
zenith-build/src/: lib.rs
zenith-core/: Cargo.toml
zenith-core/src/: camera.rs  collections.rs  file.rs  input.rs  lib.rs  log.rs  math.rs  system_event.rs
zenith-core/src/asset_loader/: gltf_loader.rs
zenith-render/: Cargo.toml
zenith-render/src/: device.rs  gltf_loader.rs  helpers.rs  lib.rs  material.rs  mesh.rs  pipeline_cache.rs  shader.rs
zenith-renderer/: Cargo.toml
zenith-renderer/src/: lib.rs  simple_mesh_renderer.rs  triangle_renderer.rs
zenith-rendergraph/: Cargo.toml
zenith-rendergraph/src/: builder.rs  graph.rs  interface.rs  lib.rs  node.rs  resource.rs
zenith-sandbox/: Cargo.toml
zenith-sandbox/examples/: gltf_benchmark.rs  model.rs
zenith-sandbox/src/: main.rs
zenith-task/: Cargo.toml
zenith-task/src/: async_task.rs  executor.rs  lib.rs  task.rs  worker.rs
zenith/src/: app.rs  engine.rs  lib.rs  main_loop.rs
