[workspace]
resolver = "3"

members = [
    "zenith-sandbox",

    "zenith",
    "zenith-core",
    "zenith-render",
    "zenith-rendergraph",
    "zenith-renderer",
]

[workspace.dependencies]
winit = "0.30"
wgpu = "25.0.0"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
glam = "0.30"
anyhow = "1.0.98"
derive_more = { version = "2.0.1", features = ["from", "try_into"] }
smallvec = "1.15"
hashbrown = "0.15.4"
foldhash = "0.1.5"
rand = "0.9.1"