[package]
name = "zenith-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
anyhow.workspace = true
derive_more.workspace = true
parking_lot.workspace = true
derive_builder.workspace = true
glam.workspace = true
wgpu.workspace = true
naga = { workspace = true, features = ["serialize", "deserialize"] }
serde = { workspace = true, features = ["derive"] }
memmap2.workspace = true
image.workspace = true
gltf.workspace = true
glob.workspace = true
bincode = { workspace = true, features = ["serde"] }

zenith-core = { path = "../zenith-core" }
zenith-task = { path = "../zenith-task" }