[package]
name = "zenith-build"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
wgsl_bindgen.workspace = true
miette.workspace = true
include_absolute_path.workspace = true

[dependencies]
naga_oil.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
