[package]
name = "zenith-render"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
winit.workspace = true
anyhow.workspace = true
naga_oil.workspace = true
include_absolute_path.workspace = true
seq-macro.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
log.workspace = true
bincode.workspace = true
smol.workspace = true
serde.workspace = true

zenith-core = { path = "../zenith-core" }
zenith-asset = { path = "../zenith-asset" }
zenith-build = { path = "../zenith-build" }
zenith-task = { path = "../zenith-task" }